<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UserProfileActivity"
        android:background="@drawable/rectangle_pink">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/layout_head"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/pink_A400_4c">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_imageView">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/imageView_profile_dp"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/user_display_picture"
                            android:background="@drawable/no_profile_pic"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>
                    <ProgressBar
                        android:id="@+id/progress_bar_profile_pic"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="110dp"
                        android:layout_centerHorizontal="true"
                        android:elevation="10dp"
                        android:visibility="gone" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView_show_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="30dp"
                    android:hint="@string/loading"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="-50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/RL_name">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/ic_profile"
                        android:contentDescription="Name"
                        android:background="@drawable/ic_profilee"/>

                    <TextView
                        android:id="@+id/textView_show_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignStart="@id/ic_profile"
                        android:layout_marginStart="50dp"
                        android:hint="@string/loading" />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_name"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_name"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_email"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/divider_name">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/ic_email"
                        android:contentDescription="E-mail"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_email"/>

                    <TextView
                        android:id="@+id/textView_show_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/ic_email"
                        android:layout_marginStart="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="20dp"
                        android:hint="@string/loading" />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_email"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_email"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_dob"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/divider_email">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/ic_dob"
                        android:contentDescription="DoB"
                        android:background="@drawable/ic_birthday"/>

                    <TextView
                        android:id="@+id/textView_show_dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/ic_dob"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/loading" />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_dob"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_dob"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_gender"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/divider_dob">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/ic_gender"
                        android:contentDescription="Gender"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/ic_gender"/>

                    <TextView
                        android:id="@+id/textView_show_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/ic_gender"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/loading" />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_gender"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_gender"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_mobile"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/divider_gender">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="20dp"
                        android:id="@+id/ic_mobile"
                        android:contentDescription="Mobile"
                        android:background="@drawable/ic_mobile"/>

                    <TextView
                        android:id="@+id/textView_show_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignStart="@id/ic_mobile"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/loading" />
                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:elevation="10dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnSignOut"

                android:layout_width="@dimen/_202pxh"
                android:layout_height="@dimen/_40pxv"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_marginBottom="@dimen/_5pxv"
                android:background="@color/pink_A400_4c"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_8pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_out"
                android:textColor="@color/black_900_7e"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18dp"
                tools:text="@string/lbl_sign_out" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationVieww"
                android:layout_width="411dp"
                android:layout_height="76dp"

                android:layout_gravity="bottom"
                android:layout_marginTop="52dp"
                android:background="#EAD1F4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:menu="@menu/bottom_navigation_bar">
            </com.google.android.material.bottomnavigation.BottomNavigationView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

